# RareGeneAI

./: .gitignore  DEVELOPMENT_GUIDE.md  METHODOLOGY.md  README.md  alembic.ini  pyproject.toml  rare_gene_AI_prompts.md  rare_gene_AI_prompts.rtf  rare_gene_AI_prompts.txt
.github/workflows/: ci.yml  docker.yml
alembic/: env.py
alembic/versions/: 4c7898986958_initial_schema_users_jobs_audit_logs.py
docker/: .env.example  Dockerfile  docker-compose.yaml
nextflow/: main.nf  nextflow.config
raregeneai/: __init__.py  cli.py
raregeneai/annotation/: annotation_engine.py  frequency_annotator.py  pathogenicity_annotator.py  regulatory_annotator.py  vep_annotator.py
raregeneai/clinical/: acmg_classifier.py  clinical_decision.py
raregeneai/compliance/: __init__.py  hipaa.py  retention.py
raregeneai/config/: default_config.yaml  settings.py
raregeneai/database/: __init__.py  audit.py  connection.py  encryption.py  models.py
raregeneai/explainability/: explainer.py
raregeneai/ingestion/: hpo_parser.py  pedigree_parser.py  vcf_parser.py
raregeneai/knowledge_graph/: graph_builder.py  graph_scorer.py
raregeneai/learning/: continuous_trainer.py  feedback_store.py  model_registry.py
raregeneai/models/: data_models.py
raregeneai/multiomics/: expression_outlier.py  integrator.py  methylation_analyzer.py
raregeneai/observability/: __init__.py  health.py  metrics.py
raregeneai/phenotype/: gene_phenotype_matcher.py  semantic_similarity.py
raregeneai/pipeline/: orchestrator.py
raregeneai/population/: population_annotator.py
raregeneai/ranking/: gene_ranker.py  model_trainer.py
raregeneai/reporting/: report_generator.py
raregeneai/scoring/: inheritance_analyzer.py  variant_scorer.py
raregeneai/security/: __init__.py  auth.py  rate_limit.py  secure_temp.py  validation.py
raregeneai/structural/: sv_annotator.py  sv_integration.py  sv_parser.py
raregeneai/ui/: api.py  app.py
raregeneai/utils/: cache.py  logging.py  parallel.py
raregeneai/validation/: benchmarker.py
scripts/: clinical_validation.py  download_references.sh  generate_test_vcf.py  run_validation.py  truthset_validation.py
templates/: report.html
tests/integration/: test_pipeline.py
tests/unit/: test_api_security.py  test_clinical_decision.py  test_compliance.py  test_continuous_learning.py  test_data_models.py  test_database.py  test_explainer.py  test_knowledge_graph.py  test_ml_ranking.py  test_multiomics.py  test_noncoding.py  test_observability.py  test_population.py  test_scoring.py  test_security.py  test_structural.py  test_trio_inheritance.py
