[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "raregeneai"
version = "1.0.0"
description = "Production-grade Rare Disease Gene Prioritization System"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "RareGeneAI Team"}
]

dependencies = [
    "cyvcf2>=0.31.0",
    "pysam>=0.22.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.1.0",
    "shap>=0.43.0",
    "pronto>=2.5.0",
    "networkx>=3.2",
    "requests>=2.31.0",
    "pydantic>=2.5.0",
    "pyarrow>=14.0.0",
    "jinja2>=3.1.0",
    "weasyprint>=60.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "streamlit>=1.28.0",
    "plotly>=5.18.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "loguru>=0.7.0",
    "pyyaml>=6.0.1",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
raregeneai = "raregeneai.cli:main"

[tool.setuptools.packages.find]
include = ["raregeneai*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
