[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "raregeneai"
version = "1.1.0"
description = "Production-grade Rare Disease Gene Prioritization System"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "RareGeneAI Team"}
]

dependencies = [
    # ── Bioinformatics ────────────────────────────────────
    "cyvcf2>=0.31.0,<0.32",
    "pysam>=0.22.0,<0.23",

    # ── Data processing ───────────────────────────────────
    "pandas>=2.1.0,<2.3",
    "numpy>=1.26.0,<2.1",
    "scipy>=1.11.0,<1.14",
    "pyarrow>=14.0.0,<17.0",

    # ── ML / ranking ─────────────────────────────────────
    "scikit-learn>=1.3.0,<1.6",
    "xgboost>=2.0.0,<2.2",
    "lightgbm>=4.1.0,<4.5",
    "shap>=0.43.0,<0.46",

    # ── Ontology / graph ─────────────────────────────────
    "pronto>=2.5.0,<2.6",
    "networkx>=3.2,<3.4",

    # ── Web / API ────────────────────────────────────────
    "fastapi>=0.104.0,<0.116",
    "uvicorn>=0.24.0,<0.32",
    "streamlit>=1.28.0,<1.41",
    "httpx>=0.25.0,<0.28",

    # ── Security & auth ──────────────────────────────────
    "python-jose[cryptography]>=3.3.0,<3.4",
    "bcrypt>=4.1.0,<5.1",
    "cryptography>=41.0.0,<44.0",
    "python-multipart>=0.0.6,<0.1",

    # ── Database ─────────────────────────────────────────
    "sqlalchemy>=2.0.0,<2.1",
    "psycopg2-binary>=2.9.9,<2.10",
    "alembic>=1.13.0,<1.14",

    # ── Observability ────────────────────────────────────
    "prometheus-client>=0.19.0,<0.22",
    "psutil>=5.9.0,<6.1",

    # ── Utilities ────────────────────────────────────────
    "requests>=2.31.0,<2.33",
    "pydantic>=2.5.0,<2.10",
    "jinja2>=3.1.0,<3.2",
    "weasyprint>=60.0,<63.0",
    "plotly>=5.18.0,<5.24",
    "click>=8.1.0,<8.2",
    "rich>=13.7.0,<13.10",
    "loguru>=0.7.0,<0.8",
    "pyyaml>=6.0.1,<6.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<8.4",
    "pytest-cov>=4.1.0,<5.1",
    "pytest-asyncio>=0.23.0,<0.25",
    "ruff>=0.1.0,<0.8",
    "mypy>=1.7.0,<1.12",
    "bandit>=1.7.0,<1.8",
    "pip-audit>=2.6.0,<2.8",
    "safety>=2.3.0,<3.3",
]

[project.scripts]
raregeneai = "raregeneai.cli:main"

[tool.setuptools.packages.find]
include = ["raregeneai*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "S", "B", "UP"]
ignore = ["S101", "S603", "S607"]  # Allow assert, subprocess

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov=raregeneai --cov-report=term-missing"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]
